--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -16,20 +16,20 @@
     <!--<link href="https://cdn.bootcss.com/avalon.js/2.0s/avalon.js" rel="stylesheet">-->
     <script src="https://cdn.bootcss.com/avalon.js/2.0s/avalon.js"></script>
 
-    <!-- Bootstrap -->
-    <!--<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">-->
+     <!--Bootstrap-->
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script>
         var viewmodel = avalon.define({
             //id必须和页面上定义的ms-controller名字相同，否则无法控制页面
             $id: "viewmodel",
+            name:"a",
             datalist: {},
-            name: "dafdfdasfjkl",
             text: "请求数据",
             request: function () {
                 $.ajax({
                     type: "post",
-                    url: "/getProductInfo?name=a",    //向后端请求数据的url
-                    data: {},
+                    url: "/getProductInfo?name=",
+                    <!--data: {name:name},-->
                     success: function (data) {
                         //$('button').removeClass("btn-primary").addClass("btn-success").attr('disabled', true);
                         if(data.code==1){
@@ -45,22 +45,36 @@
     <!--<script>-->
             <!--var vm = avalon.define({-->
                 <!--$id: "test",-->
-                <!--name: "",-->
+                <!--name: "a",-->
                 <!--request1: function (){-->
                     <!--$.ajax({-->
                         <!--type:"post",-->
-                        <!--url:"/getMarket",-->
+                        <!--url:"/getProductInfo?name=a",-->
                         <!--success: function(data){-->
                         <!--alert(data.message);-->
-                            <!--vm.name=data[0].usd;-->
+                        <!--var a = data.object;-->
+                            <!--vm.name=a[0].usd;-->
                         <!--}-->
                     <!--});-->
                 <!--}-->
             <!--})-->
     <!--</script>-->
+    <script>
+        function getPrice(){
+            var val = $("#name").val();
+            $.ajax({
+                type:"get",
+                url:"/getProductInfo",
+                data:{name:val},
+                success:function(data){
+                    alert(data);
+                }
+            });
+        }
+    </script>
 </head>
 
-<body ms-controller="viewmodel">
+<body>
 <div class="container"><br/>
     <div class="alert alert-success">
         <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
@@ -90,38 +104,39 @@
                 </ul>
             </div>
             <form role="form" class="form-inline">
-                <div class="form-group" ms-controller="test">
-                    <label>product name</label><input type="text" class="form-control" style="width: 350px"  />
-                </div>
+
 
             </form>
             <div class="progress">
                 <div class="progress-bar progress-success">
                 </div>
             </div>
-            <button type="button" class="btn btn-primary" style="margin: 10px;" ms-click="@request">{{@text}}</button>
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <td class="success"><font size="3"><strong>id</strong></font></td>
-                    <td class="success"><font size="3"><strong>name</strong></font></td>
-                    <td class="success"><font size="3"><strong>usd</strong></font></td>
-                    <td class="success"><font size="3"><strong>market</strong></font></td>
-                    <td class="success"><font size="3"><strong>description</strong></font></td>
-                    <td class="success"><font size="3"><strong>description2</strong></font></td>
-                </tr>
-                </thead>
-                <tbody>
-                <tr ms-for="el in @datalist">
-                    <td class="active">{{el.id}}</td>
-                    <td class="success">{{el.name}}</td>
-                    <td class="success">{{el.usd}}</td>
-                    <td class="warning">{{el.market}}</td>
-                    <td class="danger">{{el.description}}</td>
-                    <td class="info">{{el.description2}}</td>
-                </tr>
-                </tbody>
-            </table>
+            <div ms-controller="viewmodel">
+                <label>product name</label><input ms-duplex="@name" type="text" id="productName" class="form-control" style="width: 350px"  />
+                <button type="button" class="btn btn-primary" style="margin: 10px;" ms-click="@request">{{@text}}</button>
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <td class="success"><font size="3"><strong>id</strong></font></td>
+                        <td class="success"><font size="3"><strong>name</strong></font></td>
+                        <td class="success"><font size="3"><strong>usd</strong></font></td>
+                        <td class="success"><font size="3"><strong>market</strong></font></td>
+                        <td class="success"><font size="3"><strong>description</strong></font></td>
+                        <td class="success"><font size="3"><strong>description2</strong></font></td>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ms-for="el in @datalist">
+                        <td class="active">{{el.id}}</td>
+                        <td class="success">{{el.name}}</td>
+                        <td class="success">{{el.usd}}</td>
+                        <td class="warning">{{el.market}}</td>
+                        <td class="danger">{{el.description}}</td>
+                        <td class="info">{{el.description2}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
             <ul class="pagination">
                 <li>
                     <a href="#">Prev</a>
@@ -147,9 +162,9 @@
             </ul>
             <form role="form" class="form-inline">
                 <div class="form-group"  ms-controller="test">
-                    <label>url address &nbsp;&nbsp;&nbsp;</label><input ms-duplex="@name"   type="url" class="form-control"  style="width: 350px"/>
-                    <button type="button" class="btn btn-default" ms-click="@request1">查看价格dddd</button>
-                    <span>{{@name}}</span>
+                    <!--<label>url address &nbsp;&nbsp;&nbsp;</label><input ms-duplex="@name"    type="url" class="form-control"  style="width: 350px"/>-->
+                    <!--<button type="button" class="btn btn-default" ms-click="@request1">查看价格</button>-->
+                    <!--<span>{{@name}}</span>-->
                 </div>
             </form>
 
