--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -19,46 +19,66 @@
      <!--Bootstrap-->
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script>
+        function aaa(obj) {
+            if (event.srcElement.tagName=="TD"){
+                vm.url='aaaaaaaaa';
+                console.error(obj);
+                alert(obj);
+            }
+        }
+    </script>
+    <script>
         var viewmodel = avalon.define({
             //id必须和页面上定义的ms-controller名字相同，否则无法控制页面
             $id: "viewmodel",
-            name:"a",
+            name:'',
             datalist: {},
+            // data: JSON.parse(JSON.stringify(vm.$viewmodel)),
             text: "请求数据",
+            click: function(obj){
+                alert(obj.toLocaleString());
+            },
             request: function () {
                 $.ajax({
                     type: "post",
-                    url: "/getProductInfo?name=",
-                    <!--data: {name:name},-->
+                    data: {name: 'form'},
+                    url: "/getProductInfo",
                     success: function (data) {
                         //$('button').removeClass("btn-primary").addClass("btn-success").attr('disabled', true);
                         if(data.code==1){
                             alert(data.message);
+                            return;
                         }
-                        viewmodel.datalist = data.object;
-                        viewmodel.text = "数据请求成功，已渲染";
+                        if(data.object.length==0){
+                            viewmodel.text = "暂无数据";
+                            return;
+                        }
+                            viewmodel.datalist = data.object;
+                            viewmodel.text = "数据请求成功，已渲染";
+
                     }
                 });
             }
         });
     </script>
-    <!--<script>-->
-            <!--var vm = avalon.define({-->
-                <!--$id: "test",-->
-                <!--name: "a",-->
-                <!--request1: function (){-->
-                    <!--$.ajax({-->
-                        <!--type:"post",-->
-                        <!--url:"/getProductInfo?name=a",-->
-                        <!--success: function(data){-->
-                        <!--alert(data.message);-->
-                        <!--var a = data.object;-->
-                            <!--vm.name=a[0].usd;-->
-                        <!--}-->
-                    <!--});-->
-                <!--}-->
-            <!--})-->
-    <!--</script>-->
+    <script>
+            var vm = avalon.define({
+                $id: "result",
+                url: "",
+                result: function (){
+                    $.ajax({
+                        type:"post",
+                        data: {url: vm.url,pfId:'1',markets:''},
+                        url:"/getResult",
+                        success: function(data){
+                        alert(data.message);
+                        var a = data.object;
+                            vm.name=a[0].description1;
+                        }
+                    });
+                }
+            })
+    </script>
     <script>
         function getPrice(){
             var val = $("#name").val();
@@ -87,51 +107,27 @@
             <h2 class="text-center text-success">
                 Price Check Tool
             </h2>
-            <div class="btn-group">
-                <button class="btn btn-default">Group</button> <button data-toggle="dropdown" class="btn btn-default dropdown-toggle"><span class="caret"></span></button>
-                <ul class="dropdown-menu">
-                    <li>
-                        <a href="#">Group1</a>
-                    </li>
-                    <li class="disabled">
-                        <a href="#">Group2</a>
-                    </li>
-                    <li class="divider">
-                    </li>
-                    <li>
-                        <a href="#">Group3</a>
-                    </li>
-                </ul>
-            </div>
-            <form role="form" class="form-inline">
-
-
-            </form>
             <div class="progress">
                 <div class="progress-bar progress-success">
                 </div>
             </div>
             <div ms-controller="viewmodel">
-                <label>product name</label><input ms-duplex="@name" type="text" id="productName" class="form-control" style="width: 350px"  />
+                <label>product name</label><input ms-duplex="@name" type="text"  class="form-control" style="width: 350px"  />
                 <button type="button" class="btn btn-primary" style="margin: 10px;" ms-click="@request">{{@text}}</button>
                 <table class="table table-striped">
                     <thead>
                     <tr>
-                        <td class="success"><font size="3"><strong>id</strong></font></td>
-                        <td class="success"><font size="3"><strong>name</strong></font></td>
-                        <td class="success"><font size="3"><strong>usd</strong></font></td>
-                        <td class="success"><font size="3"><strong>market</strong></font></td>
-                        <td class="success"><font size="3"><strong>description</strong></font></td>
-                        <td class="success"><font size="3"><strong>description2</strong></font></td>
+                        <td class="danger"><font size="3"><strong>pfId</strong></font></td>
+                        <td class="info"><font size="3"><strong>name</strong></font></td>
+                        <td class="info"><font size="3"><strong>description1</strong></font></td>
+                        <td class="info"><font size="3"><strong>description2</strong></font></td>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr ms-for="el in @datalist">
-                        <td class="active">{{el.id}}</td>
-                        <td class="success">{{el.name}}</td>
-                        <td class="success">{{el.usd}}</td>
-                        <td class="warning">{{el.market}}</td>
-                        <td class="danger">{{el.description}}</td>
+                    <tr ms-for="el in @datalist" ms-click="@click">
+                        <td class="danger"><input type="checkbox"/>{{el.pfId}}</td>
+                        <td class="info">{{el.name}}</td>
+                        <td class="info">{{el.description1}}</td>
                         <td class="info">{{el.description2}}</td>
                     </tr>
                     </tbody>
@@ -161,11 +157,28 @@
                 </li>
             </ul>
             <form role="form" class="form-inline">
-                <div class="form-group"  ms-controller="test">
-                    <!--<label>url address &nbsp;&nbsp;&nbsp;</label><input ms-duplex="@name"    type="url" class="form-control"  style="width: 350px"/>-->
-                    <!--<button type="button" class="btn btn-default" ms-click="@request1">查看价格</button>-->
-                    <!--<span>{{@name}}</span>-->
+                <div class="btn-group">
+                    <button class="btn btn-default">Group</button> <button data-toggle="dropdown" class="btn btn-default dropdown-toggle"><span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="#">Group1</a>
+                        </li>
+                        <li class="disabled">
+                            <a href="#">Group2</a>
+                        </li>
+                        <li class="divider">
+                        </li>
+                        <li>
+                            <a href="#">Group3</a>
+                        </li>
+                    </ul>
                 </div>
+                <div class="form-group"  ms-controller="result">
+                    <label>url address &nbsp;&nbsp;&nbsp;</label><input ms-duplex="@url"    type="url" class="form-control"  style="width: 350px"/>
+                    <button type="button" class="btn btn-default" ms-click="@result">比较结果</button>
+                    <span>{{@url}}</span>
+                </div>
+
             </form>
 
 
