--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -19,15 +19,6 @@
      <!--Bootstrap-->
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script>
-        function aaa(obj) {
-            if (event.srcElement.tagName=="TD"){
-                vm.url='aaaaaaaaa';
-                console.error(obj);
-                alert(obj);
-            }
-        }
-    </script>
-    <script>
         var viewmodel = avalon.define({
             //id必须和页面上定义的ms-controller名字相同，否则无法控制页面
             $id: "viewmodel",
@@ -35,9 +26,6 @@
             datalist: {},
             // data: JSON.parse(JSON.stringify(vm.$viewmodel)),
             text: "请求数据",
-            click: function(obj){
-                alert(obj.toLocaleString());
-            },
             request: function () {
                 $.ajax({
                     type: "post",
@@ -65,15 +53,15 @@
             var vm = avalon.define({
                 $id: "result",
                 url: "",
+                datalist1: {},
                 result: function (){
                     $.ajax({
                         type:"post",
-                        data: {url: vm.url,pfId:'1',markets:''},
+                        data: {url: vm.url,pfId:'5',markets:'es-AR,en-US'},
                         url:"/getResult",
                         success: function(data){
                         alert(data.message);
-                        var a = data.object;
-                            vm.name=a[0].description1;
+                        vm.datalist1 = data.object;
                         }
                     });
                 }
@@ -124,7 +112,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr ms-for="el in @datalist" ms-click="@click">
+                    <tr ms-for="el in @datalist">
                         <td class="danger"><input type="checkbox"/>{{el.pfId}}</td>
                         <td class="info">{{el.name}}</td>
                         <td class="info">{{el.description1}}</td>
@@ -158,12 +146,14 @@
             </ul>
             <form role="form" class="form-inline">
                 <div class="btn-group">
-                    <button class="btn btn-default">Group</button> <button data-toggle="dropdown" class="btn btn-default dropdown-toggle"><span class="caret"></span></button>
+                    <button class="btn btn-default">Markets</button> <button data-toggle="dropdown" class="btn btn-default dropdown-toggle"><span class="caret"></span></button>
                     <ul class="dropdown-menu">
                         <li>
                             <a href="#">Group1</a>
                         </li>
-                        <li class="disabled">
+                        <li class="divider">
+                        </li>
+                        <li>
                             <a href="#">Group2</a>
                         </li>
                         <li class="divider">
@@ -173,10 +163,30 @@
                         </li>
                     </ul>
                 </div>
-                <div class="form-group"  ms-controller="result">
+                <br>
+                <div class="col-md-12 column" ms-controller="result">
                     <label>url address &nbsp;&nbsp;&nbsp;</label><input ms-duplex="@url"    type="url" class="form-control"  style="width: 350px"/>
                     <button type="button" class="btn btn-default" ms-click="@result">比较结果</button>
-                    <span>{{@url}}</span>
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <td class="danger"><font size="3"><strong>Fail market</strong></font></td>
+                            <td class="danger"><font size="3"><strong>pageSalePrice</strong></font></td>
+                            <td class="danger"><font size="3"><strong>sqlSalePrice</strong></font></td>
+                            <td class="danger"><font size="3"><strong>pageListPrice</strong></font></td>
+                            <td class="danger"><font size="3"><strong>sqlListPrice</strong></font></td>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ms-for="el in @datalist1">
+                            <td class="danger">{{el.market}}</td>
+                            <td class="danger">{{el.pageSalePrice}}</td>
+                            <td class="danger">{{el.sqlSalePrice}}</td>
+                            <td class="danger">{{el.pageListPrice}}</td>
+                            <td class="danger">{{el.sqlListPrice}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
 
             </form>
